info/envoy/transparent/transparent_proxy.yaml
node:
  id: "id_identity"
  cluster: "cluster_identity"
static_resources:
  listeners:
    - name: listener_0
      transparent: true
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 4999
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  request_headers_to_add:
                    - header:
                        key: "x-request-downstream-local"
                        value: "%DOWNSTREAM_LOCAL_ADDRESS%"
                    - header:
                        key: "x-request-downstream-remote"
                        value: "%DOWNSTREAM_REMOTE_ADDRESS%"
                    - header:
                        key: "x-request-upstream-remote"
                        value: "%UPSTREAM_REMOTE_ADDRESS%"
                      append: true
                    - header:
                        key: "x-request-start-time"
                        value: "%START_TIME(%Y/%m/%dT%H:%M:%S%z %s)%"
                      append: true
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: cluster1
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config: {}
      listener_filters:
        - name: envoy.filters.listener.original_dst
          typed_config: {}
  clusters:
    - name: cluster1
      type: ORIGINAL_DST
      connect_timeout: 6s
      #lb_policy: ORIGINAL_DST_LB
      lb_policy: CLUSTER_PROVIDED
      dns_lookup_family: V4_ONLY
cluster_manager: {}
watchdog: {}
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 19000
